feat: Allow to Retrieve Tasks Ordered by Last Activity - EXO-84071 - Meeds-io/ai#65 (#565)
This change will allow to retrieve the list of Tasks ordered by the last
Activity including Comment Dates, ChangeLog Dates and Task Creation
Date.